# luxor

./: .clang-format  CMakeLists.txt  README.md
packaging/arch/: PKGBUILD
src/: main.c
